<resources>
    <string name="app_name">SisRota</string>
    <string name="btnEntrar">Entrar</string>
    <string name="btnCadastrar">Cadastrar</string>
    <string name="tvNome">Nome:</string>
    <string name="tvEndereco">Endereço:</string>
    <string name="tvTelefone">Telefone:</string>
    <string name="tvSenha">Senha:</string>
    <string name="tvEmail">Email</string>
    <string name="btnProducao">Produção</string>
    <string name="btnCad">Editar</string>
    <string name="btnDiario">R.Diario</string>
    <string name="btnMensal">R.Mensal</string>
    <string name="btnConfig">Configurção</string>
    <string name="btnSalvarPro">Salvar</string>
    <string name="btnCancelarPro">Cancelar</string>
    <string name="tvTipoVeic">Tipo de Veiculo:</string>
    <string name="tvKmlitro">Km/Litro:</string>
    <string name="tvValorComb">Valor do Combustivel:</string>
    <string name="tvKmDiario">Km Diario</string>
    <string name="tvLitroGastos">Litro Gastos</string>
    <string name="tvGastosDiarios">Gastos Diarios</string>


</resources>
