<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TelaConfiguracao"
    tools:layout_editor_absoluteY="81dp">

    <RadioButton
        android:id="@+id/rbCarro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_weight="1"
        android:text="Carro"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTipoVeic" />

    <RadioButton
        android:id="@+id/rbMoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_weight="1"
        android:text="Moto"
        app:layout_constraintStart_toStartOf="@+id/rbCarro"
        app:layout_constraintTop_toTopOf="@+id/rbCarro" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/sisrotarodape" />

    <TextView
        android:id="@+id/tvTipoVeic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/tvTipoVeic"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/rbCarro"
        app:layout_constraintStart_toEndOf="@+id/rbCarro"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvKmlitro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:text="@string/tvKmlitro"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/etConKmLitro"
        app:layout_constraintTop_toBottomOf="@+id/rbMoto" />

    <EditText
        android:id="@+id/etConKmLitro"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvKmlitro" />

    <TextView
        android:id="@+id/tvValorComb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/tvValorComb"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/etConMedCons"
        app:layout_constraintTop_toBottomOf="@+id/etConKmLitro" />

    <EditText
        android:id="@+id/etConMedCons"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvValorComb" />

    <Button
        android:id="@+id/btnSalvarCon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="26dp"
        android:text="@string/btnSalvarPro"
        app:layout_constraintEnd_toStartOf="@+id/btnCancelarCon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etConMedCons" />

    <Button
        android:id="@+id/btnCancelarCon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:text="@string/btnCancelarPro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnSalvarCon"
        app:layout_constraintTop_toBottomOf="@+id/etConMedCons" />

</android.support.constraint.ConstraintLayout>