<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RelatorioDiario">

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/sisrotarodape" />

    <TextView
        android:id="@+id/tvKmDiario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvKmDiario"
        app:layout_constraintBottom_toTopOf="@+id/etRelKmDiario"
        app:layout_constraintStart_toStartOf="@+id/etRelKmDiario" />

    <EditText
        android:id="@+id/etRelKmDiario"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="35dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvLitroGastos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvLitroGastos"
        app:layout_constraintBottom_toTopOf="@+id/etRelLitroGas"
        app:layout_constraintStart_toStartOf="@+id/etRelLitroGas" />

    <EditText
        android:id="@+id/etRelLitroGas"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etRelKmDiario" />

    <TextView
        android:id="@+id/tvGastosDiarios"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvGastosDiarios"
        app:layout_constraintBottom_toTopOf="@+id/etRelGastosDia"
        app:layout_constraintStart_toStartOf="@+id/etRelGastosDia" />

    <EditText
        android:id="@+id/etRelGastosDia"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="38dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etRelLitroGas" />
</android.support.constraint.ConstraintLayout>